# anyformat-workshop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/anyformat/: __init__.py  cli.py
src/anyformat/converters/: __init__.py  audio.py  image.py  video.py
src/anyformat/utils/: __init__.py  batch.py  config.py  paths.py  probe.py
tests/: conftest.py
tests/integration/: test_image_conversion.py
tests/unit/: test_batch.py  test_config.py  test_paths.py  test_probe.py
